--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -189,11 +189,11 @@
     </div>
     <ion-grid class="content-grid" *ngIf="view === 'profile'">
       <ion-row>
-        <!--List My Journey-->
+        <!--List My Learning-->
         <ion-col [size]="(platform.width() >= 768) && (journeys?.length <= 6) ? 6 : 12" [ngStyle]="{'padding': platform.width() >= 768 ? '6px 5px' : '6px 0'}">
           <ion-card class="ion-no-margin ion-no-padding section-card" [ngClass]="{'mobile-card': platform.width() < 768}">
             <ion-item class="section" lines="none"> <!--section header-->
-              <ion-label class="section-label" color="darkgrey">My Journey</ion-label>
+              <ion-label class="section-label" color="darkgrey">My Learning</ion-label>
               <ion-button slot="end" [routerLink]="['../choose', { categoryId: '5e9f46e1c8bf1a622fec69d5', joinAs: 'user_list_1' }]" fill="clear">
                 <ion-icon name="add"></ion-icon>
               </ion-button>
