--- a/src/app/pages/feature/manage/feature-creator/feature-creator.page.scss
+++ b/src/app/pages/feature/manage/feature-creator/feature-creator.page.scss
@@ -47,4 +47,9 @@ app-feature-creator {
   .light {
     color: white;
   }
+
+  .schedule-title-input {
+    text-wrap: normal;
+    cursor: pointer;
+  }
 }
