--- a/src/app/pages/feature/manage/feature-curriculum/feature-curriculum.page.html
+++ b/src/app/pages/feature/manage/feature-curriculum/feature-curriculum.page.html
@@ -52,7 +52,7 @@
               <ion-item class="calendar-item ion-no-padding" *ngIf="calendaritem.goals && calendaritem.goals.includes(goal[0])">
                 <span class="content-count">{{j+1}}.</span>
                 <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
-                <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ngModelChange)="changeContentCalendarItem(calendaritem, 'title')" ></ion-input>
+                <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ngModelChange)="changeContentCalendarItem(calendaritem, 'title')"></ion-input>
                 <ion-buttons slot="end" class="ion-no-margin">
                   <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
                   <ion-button fill="clear" color="grey" (click)="promptEditContentCalendar($event, calendaritem)"><ion-icon name="cog"></ion-icon></ion-button>
@@ -112,8 +112,8 @@
         <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
           <ion-label class="ion-margin-start">Uncategorized</ion-label>
         </ion-item>
-        <div *ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">
-          <ion-item class="calendar-item ion-no-padding" *ngIf="!calendaritem.goals.length">
+        <ion-virtual-scroll [items]="timeline"> <!--*ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">-->
+          <ion-item *virtualItem="let calendaritem; index as j" class="calendar-item ion-no-padding" [hidden]="calendaritem.goals.length">
             <span class="content-count">{{j+1}}.</span>
             <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
             <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ngModelChange)="changeContentCalendarItem(calendaritem, 'title')"></ion-input>
@@ -123,7 +123,7 @@
               <ion-button fill="clear" (click)="removeTimelineItem($event, programId, calendaritem)" class="close-button" *ngIf="calendaritem._id"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
             </ion-buttons>
           </ion-item>
-        </div>
+        </ion-virtual-scroll>
       </ion-card-content>
     </ion-card>
     <ion-item hidden>
