--- a/src/app/pages/feature/manage/feature-curriculum/feature-curriculum.page.html
+++ b/src/app/pages/feature/manage/feature-curriculum/feature-curriculum.page.html
@@ -3,134 +3,10 @@
     <ion-buttons slot="start" *ngIf="modalPage">
       <ion-button (click)="closeModal()" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
-    <ion-title>Curriculum</ion-title>
+    <ion-title>Curriculum (Dev)</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="schedule">
-  <ion-grid style="height: 100%; width: 100%; position: absolute" *ngIf="!loadCompleted">
-    <ion-row class="ion-align-items-center" style="height: 100%">
-      <ion-spinner name="dots"></ion-spinner>
-    </ion-row>
-  </ion-grid>
-  <ion-list>
-    <ion-row class="ion-justify-content-center">
-      <ion-button (click)="touchSchedule('create schedule')" *ngIf="!this.schedule._id">
-        <span>Create Curriculum</span>
-      </ion-button>
-    </ion-row>
-    <ion-item *ngIf="this.schedule._id && !timeline.length">
-      <ion-label class="ion-text-center message-label">Your timeline is empty.</ion-label>
-    </ion-item>
-    <ion-item *ngIf="!this.schedule._id">
-      <ion-label class="ion-text-center message-label">Click 'Create Schedule' to begin.</ion-label>
-    </ion-item>
-    <div *ngFor="let favoriteGoal of listOfDisplayGoals; trackBy: customTrackBy" [hidden]="(favoriteGoal[1] === 'goal')">
-      <!--Favorite Goals-->
-      <ion-card mode="md" class="ion-no-padding">
-        <ion-card-content class="goal-content favorite ion-no-padding">
-          <ion-badge [ngStyle]="{'background': (favoriteGoal[3] | background : { listOfDisplayGoals: listOfDisplayGoals, goal: favoriteGoal } : 'color') }" class="favorite-goal-type">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][6]}}</ion-badge>
-          <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
-            <ion-textarea class="ion-margin-start" autoGrow="true" rows="1" [(ngModel)]="favoriteGoal[5]" (ionInput)="touchGoal(favoriteGoal, 'text')" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][6]"></ion-textarea>
-          </ion-item>
-          <ion-buttons class="more-goal-options" (click)="moreGoalFunctions($event, favoriteGoal)" fill="clear" size="small">
-            <ion-button><ion-icon ios="ellipsis-horizontal" md="ellipsis-horizontal" color="darkgrey"></ion-icon></ion-button>
-          </ion-buttons>
-        </ion-card-content>
-      </ion-card>
-      <!--Goals tagged under the Favorite Goal-->
-      <div *ngFor="let goal of listOfDisplayGoals; trackBy: customTrackBy">
-        <ion-card *ngIf="favoriteGoal[1] === 'master goal' && goal[1] === 'goal' && favoriteGoal[0] === goal[4]" [ngStyle]="{'background': (goal[3] | background : { listOfDisplayGoals: listOfDisplayGoals, goal: goal } : 'color') }" mode="md">
-          <ion-card-content class="ion-no-padding goal-content">
-            <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
-              <ion-textarea class="ion-margin-start" autoGrow="true" rows="1" [(ngModel)]="goal[5]" (ionInput)="touchGoal(goal, 'text')" placeholder="Goal Name"></ion-textarea>
-            </ion-item>
-            <ion-buttons class="more-goal-options" (click)="moreGoalFunctions($event, goal)" fill="clear" size="small">
-              <ion-button><ion-icon ios="ellipsis-horizontal" md="ellipsis-horizontal" color="darkgrey"></ion-icon></ion-button>
-            </ion-buttons>
-            <div *ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">
-              <ion-item class="calendar-item ion-no-padding" *ngIf="calendaritem.goals && calendaritem.goals.includes(goal[0])">
-                <span class="content-count">{{j+1}}.</span>
-                <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
-                <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ngModelChange)="changeContentCalendarItem(calendaritem, 'title')"></ion-input>
-                <ion-buttons slot="end" class="ion-no-margin">
-                  <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
-                  <ion-button fill="clear" color="grey" (click)="promptEditContentCalendar($event, calendaritem)"><ion-icon name="cog"></ion-icon></ion-button>
-                  <ion-button fill="clear" (click)="removeTimelineItem($event, programId, calendaritem)" class="close-button" *ngIf="calendaritem._id"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
-                </ion-buttons>
-              </ion-item>
-            </div>
-            <ion-item class="calendar-item ion-no-padding" (click)="addContenCalendar(goal)">
-              <span class="content-count"><ion-icon name="add"></ion-icon></span>
-              <ion-label class="moment-input" *ngIf="moment && resource">Add New {{(moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 2) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][2] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][15]}}</ion-label>
-            </ion-item>
-          </ion-card-content>
-        </ion-card>
-      </div>
-    </div>
-    <!--Goals with no valid Favorite Goal Tags-->
-    <div *ngFor="let goal of listOfDisplayGoals; trackBy: customTrackBy">
-      <ion-card *ngIf="goal[1] === 'goal' && !(null | calendar : 'checkfavoritegoaltag' : { listOfDisplayGoals: listOfDisplayGoals, goal: goal })" [ngStyle]="{'background': (goal[3] | background : { listOfDisplayGoals: listOfDisplayGoals, goal: goal } : 'color') }" mode="md">
-        <ion-card-content class="goal-content ion-no-padding">
-          <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
-            <ion-textarea class="ion-margin-start" autoGrow="true" rows="1" [(ngModel)]="goal[5]" (ionInput)="touchGoal(goal, 'text')" placeholder="Goal Name"></ion-textarea>
-          </ion-item>
-          <ion-buttons class="more-goal-options" (click)="moreGoalFunctions($event, goal)" fill="clear" size="small">
-            <ion-button><ion-icon ios="ellipsis-horizontal" md="ellipsis-horizontal" color="darkgrey"></ion-icon></ion-button>
-          </ion-buttons>
-          <div *ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">
-            <ion-item class="calendar-item ion-no-padding" *ngIf="calendaritem.goals && calendaritem.goals.includes(goal[0])">
-              <span class="content-count">{{j+1}}.</span>
-              <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
-              <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ngModelChange)="changeContentCalendarItem(calendaritem, 'title')" ></ion-input>
-              <ion-buttons slot="end" class="ion-no-margin">
-                <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
-                <ion-button fill="clear" color="grey" (click)="promptEditContentCalendar($event, calendaritem)"><ion-icon name="cog"></ion-icon></ion-button>
-                <ion-button fill="clear" (click)="removeTimelineItem($event, programId, calendaritem)" class="close-button" *ngIf="calendaritem._id"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
-              </ion-buttons>
-            </ion-item>
-          </div>
-          <ion-item class="calendar-item ion-no-padding" (click)="addContenCalendar(goal)">
-            <span class="content-count"><ion-icon name="add"></ion-icon></span>
-            <ion-label class="moment-input" *ngIf="moment && resource && moment.resource.matrix_number[0].includes(10210)">Add New {{(moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 2) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][2] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][15]}}</ion-label>
-            <ion-label class="moment-input" *ngIf="moment && resource && moment.resource.matrix_number[0].includes(10220)">Add New {{(moment.matrix_string[moment.resource.matrix_number[0].indexOf(10220)].length > 2) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10220)][2] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10220)][15]}}</ion-label>
-          </ion-item>
-        </ion-card-content>
-      </ion-card>
-    </div>
-    <ion-card mode="md" (click)="promptNewGoalName($event)" *ngIf="this.schedule._id">
-      <ion-card-content class="goal-content ion-no-padding">
-        <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
-          <ion-icon name="add"></ion-icon>
-          <ion-label class="ion-margin-start" >Add New Section</ion-label>
-        </ion-item>
-      </ion-card-content>
-    </ion-card>
-    <!--Uncategorized-->
-    <ion-card style="background: var(--ion-color-lightgrey)" mode="md" *ngIf="loadCompleted && (timeline | calendar: 'calendaritemuncategorized')">
-      <ion-card-content class="goal-content overall ion-no-padding">
-        <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
-          <ion-label class="ion-margin-start">Uncategorized</ion-label>
-        </ion-item>
-        <ion-virtual-scroll [items]="timeline"> <!--*ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">-->
-          <ion-item *virtualItem="let calendaritem; index as j" class="calendar-item ion-no-padding" [hidden]="calendaritem.goals.length">
-            <span class="content-count">{{j+1}}.</span>
-            <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
-            <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ngModelChange)="changeContentCalendarItem(calendaritem, 'title')"></ion-input>
-            <ion-buttons slot="end" class="ion-no-margin">
-              <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
-              <ion-button fill="clear" color="grey" (click)="promptEditContentCalendar($event, calendaritem)"><ion-icon name="cog"></ion-icon></ion-button>
-              <ion-button fill="clear" (click)="removeTimelineItem($event, programId, calendaritem)" class="close-button" *ngIf="calendaritem._id"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
-            </ion-buttons>
-          </ion-item>
-        </ion-virtual-scroll>
-      </ion-card-content>
-    </ion-card>
-    <ion-item hidden>
-      <ion-label>Assign To</ion-label>
-      <ion-select #SelectGoals [(ngModel)]="selectCalendarItem.goals" (ionChange)="assignGoal()" interface="alert" multiple="true" slot="end">
-        <ion-select-option *ngFor="let goal of listOfDisplayGoals" [value]="goal[0]" [class.selected]="selectCalendarItem.goals && selectCalendarItem.goals.includes(goal[0])">{{goal[5]}}</ion-select-option>
-      </ion-select>
-    </ion-item>
-  </ion-list>
+<ion-content>
+
 </ion-content>
