--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -32,13 +32,22 @@
         </ion-item>
         <ion-item lines="none">
           <ion-label (click)="focusCalendarDateField('start')" class="cursor-pointer"><span [ngClass]="{ 'underline-datestring': dateType == 'start'}">Start Date: {{recurrenceStartDate | datetime: 'w:l,m:s,y:n,d:n'}}</span><p style="color: red; font-style: italic;" *ngIf="dateType === 'start'"><ion-icon name="alert-circle"></ion-icon>Choose a Date Below</p></ion-label> <!--Start, Choose a date below-->
-          <ion-datetime *ngIf="recurrenceStartTime" placeholder="12:00 pm" displayFormat="h:mm a" minuteValues="0,15,30,45" [(ngModel)]="recurrenceStartTime" [pickerOptions]="{cssClass: 'level-15'}"></ion-datetime>
+          <ion-datetime-button datetime="time1" *ngIf="recurrenceStartTime"></ion-datetime-button>
         </ion-item>
+        <ion-popover [keepContentsMounted]="true">
+          <ng-template>
+            <ion-datetime id="time1" minuteValues="0,15,30,45" presentation="time" [(ngModel)]="recurrenceStartTime"></ion-datetime>
+          </ng-template>
+        </ion-popover>
         <ion-item lines="none" *ngIf="dateType != 'start'">
           <ion-label (click)="focusCalendarDateField('end')" class="cursor-pointer" ><span [ngClass]="{ 'underline-datestring': dateType == 'end'}">End Date: {{recurrenceEndDate | datetime: 'w:l,m:s,y:n,d:n'}}</span><p style="color: red; font-style: italic;" *ngIf="dateType === 'end'"><ion-icon name="alert-circle"></ion-icon>Choose a Date Below</p></ion-label> <!--End, Choose a date below-->
-          <ion-datetime *ngIf="recurrenceEndTime" placeholder="12:00 pm" (ionCancel)="dateType=''" displayFormat="h:mm a" minuteValues="0,15,30,45" [(ngModel)]="recurrenceEndTime" [pickerOptions]="{cssClass: 'level-15'}"></ion-datetime>
+          <ion-datetime-button datetime="time2" *ngIf="recurrenceEndTime"></ion-datetime-button>
         </ion-item>
-
+        <ion-popover [keepContentsMounted]="true">
+          <ng-template>
+            <ion-datetime id="time2" minuteValues="0,15,30,45" presentation="time" [(ngModel)]="recurrenceEndTime"></ion-datetime>
+          </ng-template>
+        </ion-popover>
         <ion-card class="monthview" *ngIf="dateType">
           <div class="month-title-container">
             <ion-icon name="chevron-back-outline" class="calendar-arrow left" (click)="calendarService.changeDate($event, 4)"></ion-icon>
@@ -67,8 +76,13 @@
         </ion-card>
         <ion-item lines="none" *ngIf="dateType == 'start'">
           <ion-label (click)="dateType = 'end'" class="cursor-pointer" >End: {{recurrenceEndDate  | datetime: 'w:l,m:l,y:n,d:n'}}</ion-label>
-          <ion-datetime placeholder="12:00 pm" displayFormat="h:mm a" minuteValues="0,15,30,45" [(ngModel)]="recurrenceEndTime" [pickerOptions]="{cssClass: 'level-15'}"></ion-datetime>
+          <ion-datetime-button datetime="time3"></ion-datetime-button>
         </ion-item>
+        <ion-popover [keepContentsMounted]="true">
+          <ng-template>
+            <ion-datetime id="time3" minuteValues="0,15,30,45" presentation="time" [(ngModel)]="recurrenceEndTime"></ion-datetime>
+          </ng-template>
+        </ion-popover>
       </ion-item-group>
       <ion-item lines="none">
         <ion-label style="width: 90%" class="ion-margin-left" slot="start">Repeat Frequency</ion-label>
@@ -122,7 +136,7 @@
             <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
               <ion-textarea class="ion-margin-start" autoGrow="true" rows="1" [(ngModel)]="favoriteGoal[5]" (ionInput)="touchGoal(favoriteGoal, 'text')" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][6]"></ion-textarea>
             </ion-item>
-            <ion-buttons class="more-goal-options" (click)="moreGoalFunctions($event, favoriteGoal)" fill="clear" size="small">
+            <ion-buttons class="more-goal-options" (click)="moreGoalFunctions($event, favoriteGoal)" size="small">
               <ion-button><ion-icon ios="ellipsis-horizontal" md="ellipsis-horizontal" color="darkgrey"></ion-icon></ion-button>
             </ion-buttons>
           </ion-card-content>
@@ -134,13 +148,14 @@
               <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
                 <ion-textarea class=" ion-margin-start" autoGrow="true" rows="1" [(ngModel)]="goal[5]" (ionInput)="touchGoal(goal, 'text')" placeholder="Goal Name"></ion-textarea>
               </ion-item>
-              <ion-buttons class="more-goal-options" (click)="moreGoalFunctions($event, goal)" fill="clear" size="small">
+              <ion-buttons class="more-goal-options" (click)="moreGoalFunctions($event, goal)" size="small">
                 <ion-button><ion-icon ios="ellipsis-horizontal" md="ellipsis-horizontal" color="darkgrey"></ion-icon></ion-button>
               </ion-buttons>
               <div *ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">
                 <ion-item class="calendar-item ion-no-padding" *ngIf="calendaritem.goals && calendaritem.goals.includes(goal[0])">
                   <span class="content-count">{{j+1}}.</span>
-                  <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
+                  <!--<ion-datetime-button datetime="date" class="content-date ion-text-wrap" [(ngModel)]="calendaritem.startDate" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime-button>-->
+                  <ion-label class="content-date ion-text-wrap" >{{calendaritem.startDate | datetime: 'm:l,d:n,y:n'}}</ion-label>
                   <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ngModelChange)="changeContentCalendarItem(calendaritem, 'title')" ></ion-input>
                   <ion-buttons slot="end" class="ion-no-margin">
                     <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
@@ -164,13 +179,14 @@
             <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
               <ion-textarea class="ion-margin-start" autoGrow="true" rows="1" [(ngModel)]="goal[5]" (ionInput)="touchGoal(goal, 'text')" placeholder="Goal Name"></ion-textarea>
             </ion-item>
-            <ion-buttons class="more-goal-options" (click)="moreGoalFunctions($event, goal)" fill="clear" size="small">
+            <ion-buttons class="more-goal-options" (click)="moreGoalFunctions($event, goal)" size="small">
               <ion-button><ion-icon ios="ellipsis-horizontal" md="ellipsis-horizontal" color="darkgrey"></ion-icon></ion-button>
             </ion-buttons>
             <div *ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">
               <ion-item class="calendar-item ion-no-padding" *ngIf="calendaritem.goals && calendaritem.goals.includes(goal[0])">
                 <span class="content-count">{{j+1}}.</span>
-                <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
+                <!--<ion-datetime-button datetime="date" class="content-date ion-text-wrap" [(ngModel)]="calendaritem.startDate" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime-button>-->
+                <ion-label class="content-date ion-text-wrap" >{{calendaritem.startDate | datetime: 'm:l,d:n,y:n'}}</ion-label>
                 <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ngModelChange)="changeContentCalendarItem(calendaritem, 'title')" ></ion-input>
                 <ion-buttons slot="end" class="ion-no-margin">
                   <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
@@ -204,7 +220,8 @@
           <div *ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">
             <ion-item class="calendar-item ion-no-padding" *ngIf="!calendaritem.goals.length">
               <span class="content-count">{{j+1}}.</span>
-              <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
+              <!--<ion-datetime-button datetime="date" class="content-date ion-text-wrap" [(ngModel)]="calendaritem.startDate" (ngModelChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime-button>-->
+              <ion-label class="content-date ion-text-wrap" >{{calendaritem.startDate | datetime: 'm:l,d:n,y:n'}}</ion-label>
               <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ngModelChange)="changeContentCalendarItem(calendaritem, 'title')"></ion-input>
               <ion-buttons slot="end" class="ion-no-margin">
                 <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
@@ -290,7 +307,7 @@
         <div class="moment-label"><img class="side-image" src="assets/img/Settings_Gray.png"></div>
         <div class="moment-input">Settings</div>
       </ion-item>
-      <ion-item-group class="ion-margin-left" lines="full">
+      <ion-item-group class="ion-margin-left">
         <ion-item lines="none">
           <ion-label class="ion-margin-left">Prompt Users for Custom Start Date</ion-label>
           <ion-checkbox [(ngModel)]="schedule.array_boolean[0]"></ion-checkbox>
