--- a/src/app/pages/manage/designsystem/designsystem.page.html
+++ b/src/app/pages/manage/designsystem/designsystem.page.html
@@ -28,6 +28,31 @@
 
 <ion-content>
   <div class="content-container" [ngStyle]="{'background': platform.width() >= 768 ? 'var(--ion-color-secondary)' : 'var(--ion-color-lightgrey)'}">
+    <ion-badge [ngStyle]="{'background': 'color' }" class="badge-label">ion-range</ion-badge>
+    <ion-toolbar>
+      <ion-item class="ion-justify-content-evenly ion-padding-horizontal">
+        <ion-range></ion-range>
+      </ion-item>
+    </ion-toolbar>
+    <ion-badge [ngStyle]="{'background': 'color' }" class="badge-label">ion-input range</ion-badge>
+    <ion-toolbar>
+      <ion-item class="ion-justify-content-evenly ion-padding-horizontal">
+        <input type="range">
+      </ion-item>
+    </ion-toolbar>
+    <ion-badge [ngStyle]="{'background': 'color' }" class="badge-label">ngx-slider</ion-badge>
+    <ion-toolbar>
+      <ion-item class="ion-justify-content-evenly ion-padding-horizontal">
+        <ngx-slider [(value)]="value" [options]="options"></ngx-slider>
+      </ion-item>
+    </ion-toolbar>
+    <ion-badge [ngStyle]="{'background': 'color' }" class="badge-label">Jitsi Call</ion-badge>
+    <ion-toolbar>
+      <ion-row class="ion-justify-content-evenly">
+        <ion-button shape="round" (click)="testJitsiCall()">Call</ion-button>
+      </ion-row>
+    </ion-toolbar>
+
     <ion-badge [ngStyle]="{'background': 'color' }" class="badge-label">Typography</ion-badge>
 
     <ion-item lines="none">
