--- a/src/app/pages/manage/designsystem/designsystem.page.html
+++ b/src/app/pages/manage/designsystem/designsystem.page.html
@@ -34,7 +34,7 @@
         <ion-range></ion-range>
       </ion-item>
     </ion-toolbar>
-    <ion-badge [ngStyle]="{'background': 'color' }" class="badge-label">ion-input range</ion-badge>
+    <ion-badge [ngStyle]="{'background': 'color' }" class="badge-label">input range</ion-badge>
     <ion-toolbar>
       <ion-item class="ion-justify-content-evenly ion-padding-horizontal">
         <input type="range">
