--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,12 +55,6 @@
               <ion-label>Settings</ion-label>
             </ion-item>
           </ion-menu-toggle>
-          <!--<ion-menu-toggle auto-hide="false">
-            <ion-item id="inviteLabel" [routerLink]="['/app/invite']" mode="md">
-              <ion-icon slot="start" name="invite"></ion-icon>
-              <ion-label>Invite</ion-label>
-            </ion-item>
-          </ion-menu-toggle>-->
           <ion-menu-toggle auto-hide="false" *ngIf="userData.activitiesWithAdminAccess && userData.activitiesWithAdminAccess.length">
             <ion-item [routerLink]="['/app/manage/activity/' + userData.currentManageActivityId + '/insight/' + userData.currentManageActivityId]" mode="md">
               <ion-icon slot="start" name="admin"></ion-icon>
@@ -87,19 +81,18 @@
             <ion-item>
               <p style="font-size: 12px; color: var(--ion-color-dark)">Address: {{networkService.domain}}</p>
             </ion-item>
+            <ion-menu-toggle auto-hide="false">
+              <ion-item id="inviteLabel" [routerLink]="['/app/designsystem']" mode="md">
+                <ion-icon slot="start" name="admin"></ion-icon>
+                <ion-label>Debug</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
           </div>
-          <ion-item hidden>
-            <ion-label>Online Status</ion-label>
-            <ion-select #restSelect [(ngModel)]="userData.UIrestStatus" (ngModelChange)="chatService.toggleRestStatus($event)">
-              <ion-select-option value="active">Active</ion-select-option>
-              <ion-select-option value="away">Away</ion-select-option>
-            </ion-select>
-          </ion-item>
         </ion-list>
         <div style="height: 100px;" *ngIf="userData.developerModeClick < 3 && networkService.domain === 'https://server.restvo.com'" (click)="userData.developerModeClick = userData.developerModeClick + 1"></div>
       </ion-content>
     </ion-menu>
-    <ion-router-outlet id="main-app"></ion-router-outlet>
+    <ion-router-outlet id="main-app" [swipeGesture]="false"></ion-router-outlet>
   </ion-split-pane>
   <ion-router-outlet name="sub" id="sub-panel" [ngStyle]="{'left': router.url.includes('(sub:') ? ((100 - userData.subpanelWidth) + '%') : '100%', 'width': router.url.includes('(sub:') ? (userData.subpanelWidth + '%') : '0'}"></ion-router-outlet>
 </ion-app>
